added other sections of the landing page

--- a/LEVEL-1/TASK-2/index.html
+++ b/LEVEL-1/TASK-2/index.html
@@ -97,6 +97,273 @@
                 </div>
             </section>
 
+            <section class="product-section">
+                <div class="product-section-title"><h2>T&nbsp;H&nbsp;E&nbsp;&nbsp;G&nbsp;L&nbsp;O&nbsp;W&nbsp;&nbsp;C&nbsp;O&nbsp;L&nbsp;L&nbsp;E&nbsp;C&nbsp;T&nbsp;I&nbsp;O&nbsp;N</h2></div>
+                <h2><a href="#">SKINCARE ESSENTIALS</a> </h2>
+                <div class="product-row">
+                    <div class="product-card">
+                        <img src="assets/products/skincare products/sp7.jpg" alt="Serum 6">
+                        <p class="title">Salicylic Acid Serum</p>
+                        <p class="subtitle">Fights Acne</p>
+                        <p class="price">₹599</p>
+                        <button>Add to cart</button>
+                    </div>
+                    <div class="product-card">
+                        <img src="assets/products/skincare products/sp11.webp" alt="Serum 7">
+                        <p class="title">Salicylic Acid Serum</p>
+                        <p class="subtitle">Fights Acne</p>
+                        <p class="price">₹599</p>
+                        <button>Add to cart</button>
+                    </div>
+                    <div class="product-card">
+                        <img src="assets/products/skincare products/sp12.jpg" alt="Serum 7">
+                        <p class="title">Salicylic Acid Serum</p>
+                        <p class="subtitle">Fights Acne</p>
+                        <p class="price">₹599</p>
+                        <button>Add to cart</button>
+                    </div>
+                    <div class="product-card">
+                        <img src="assets/products/skincare products/sp13.webp" alt="Serum 7">
+                        <p class="title">Salicylic Acid Serum</p>
+                        <p class="subtitle">Fights Acne</p>
+                        <p class="price">₹599</p>
+                        <button>Add to cart</button>
+                    </div>
+                    <div class="product-card">
+                        <img src="assets/products/skincare products/sp9.jpg" alt="Serum 7">
+                        <p class="title">Salicylic Acid Serum</p>
+                        <p class="subtitle">Fights Acne</p>
+                        <p class="price">₹599</p>
+                        <button>Add to cart</button>
+                    </div>
+                    <div class="product-card">
+                        <img src="assets/products/skincare products/sp2.webp" alt="Serum 2">
+                        <p class="title">Salicylic Acid Serum</p>
+                        <p class="subtitle">Fights Acne</p>
+                        <p class="price">₹599</p>
+                        <button>Add to cart</button>
+                    </div>
+                    <div class="product-card">
+                        <img src="assets/products/skincare products/sp3.jpg" alt="Serum 3">
+                        <p class="title">Salicylic Acid Serum</p>
+                        <p class="subtitle">Fights Acne</p>
+                        <p class="price">₹599</p>
+                        <button>Add to cart</button>
+                    </div>
+                    <div class="product-card">
+                        <img src="assets/products/skincare products/sp6.jpg" alt="Serum 5">
+                        <p class="title">Salicylic Acid Serum</p>
+                        <p class="subtitle">Fights Acne</p>
+                        <p class="price">₹599</p>
+                        <button>Add to cart</button>
+                    </div>
+                </div>
+
+
+                <h2><a href="#">BODYCARE RITUALS</a></h2>
+                <div class="product-row">
+                    <div class="product-card">
+                        <img src="assets/products/bodycare products/1.webp" alt="Moisturizer 1">
+                        <p class="title">Hydrating Moisturizer</p>
+                        <p class="subtitle">Lightweight & Nourishing</p>
+                        <p class="price">₹349</p>
+                        <button>Add to cart</button>
+                    </div>
+                    <div class="product-card">
+                        <img src="assets/products/bodycare products/10.jpg" alt="Moisturizer 1">
+                        <p class="title">Hydrating Moisturizer</p>
+                        <p class="subtitle">Lightweight & Nourishing</p>
+                        <p class="price">₹349</p>
+                        <button>Add to cart</button>
+                    </div>
+                    <div class="product-card">
+                        <img src="assets/products/bodycare products/11.jpg" alt="Moisturizer 1">
+                        <p class="title">Hydrating Moisturizer</p>
+                        <p class="subtitle">Lightweight & Nourishing</p>
+                        <p class="price">₹349</p>
+                        <button>Add to cart</button>
+                    </div>
+                    <div class="product-card">
+                        <img src="assets/products/bodycare products/2.webp" alt="Moisturizer 1">
+                        <p class="title">Hydrating Moisturizer</p>
+                        <p class="subtitle">Lightweight & Nourishing</p>
+                        <p class="price">₹349</p>
+                        <button>Add to cart</button>
+                    </div>
+                    <div class="product-card">
+                        <img src="assets/products/bodycare products/3.webp" alt="Moisturizer 1">
+                        <p class="title">Hydrating Moisturizer</p>
+                        <p class="subtitle">Lightweight & Nourishing</p>
+                        <p class="price">₹349</p>
+                        <button>Add to cart</button>
+                    </div>
+                    <div class="product-card">
+                        <img src="assets/products/bodycare products/4.jpeg" alt="Moisturizer 1">
+                        <p class="title">Hydrating Moisturizer</p>
+                        <p class="subtitle">Lightweight & Nourishing</p>
+                        <p class="price">₹349</p>
+                        <button>Add to cart</button>
+                    </div>
+                    <div class="product-card">
+                        <img src="assets/products/bodycare products/5.webp" alt="Moisturizer 1">
+                        <p class="title">Hydrating Moisturizer</p>
+                        <p class="subtitle">Lightweight & Nourishing</p>
+                        <p class="price">₹349</p>
+                        <button>Add to cart</button>
+                    </div>
+                    <div class="product-card">
+                        <img src="assets/products/bodycare products/6.avif" alt="Moisturizer 1">
+                        <p class="title">Hydrating Moisturizer</p>
+                        <p class="subtitle">Lightweight & Nourishing</p>
+                        <p class="price">₹349</p>
+                        <button>Add to cart</button>
+                    </div>
+                    <div class="product-card">
+                        <img src="assets/products/bodycare products/7.webp" alt="Moisturizer 1">
+                        <p class="title">Hydrating Moisturizer</p>
+                        <p class="subtitle">Lightweight & Nourishing</p>
+                        <p class="price">₹349</p>
+                        <button>Add to cart</button>
+                    </div>
+                    <div class="product-card">
+                        <img src="assets/products/bodycare products/8.avif" alt="Moisturizer 1">
+                        <p class="title">Hydrating Moisturizer</p>
+                        <p class="subtitle">Lightweight & Nourishing</p>
+                        <p class="price">₹349</p>
+                        <button>Add to cart</button>
+                    </div>
+                    <div class="product-card">
+                        <img src="assets/products/bodycare products/9.jpeg" alt="Moisturizer 1">
+                        <p class="title">Hydrating Moisturizer</p>
+                        <p class="subtitle">Lightweight & Nourishing</p>
+                        <p class="price">₹349</p>
+                        <button>Add to cart</button>
+                    </div>
+                </div>
+
+
+                <h2><a href="#">HAIRCARE HEROES</a></h2>
+                <div class="product-row">
+                    <div class="product-card">
+                        <img src="assets/products/haircare products/1.jpg" alt="Shampoo">
+                        <p class="title">Gentle Shampoo</p>
+                        <p class="subtitle">Cleanses & Strengthens</p>
+                        <p class="price">₹299</p>
+                        <button>Add to cart</button>
+                    </div>
+                    <div class="product-card">
+                        <img src="assets/products/haircare products/10.jpeg" alt="Conditioner">
+                        <p class="title">Silky Conditioner</p>
+                        <p class="subtitle">Smooths Hair</p>
+                        <p class="price">₹349</p>
+                        <button>Add to cart</button>
+                    </div>
+                        <div class="product-card">
+                        <img src="assets/products/haircare products/11.webp" alt="Conditioner">
+                        <p class="title">Silky Conditioner</p>
+                        <p class="subtitle">Smooths Hair</p>
+                        <p class="price">₹349</p>
+                        <button>Add to cart</button>
+                    </div>
+                        <div class="product-card">
+                        <img src="assets/products/haircare products/13.jpg" alt="Conditioner">
+                        <p class="title">Silky Conditioner</p>
+                        <p class="subtitle">Smooths Hair</p>
+                        <p class="price">₹349</p>
+                        <button>Add to cart</button>
+                    </div>
+                        <div class="product-card">
+                        <img src="assets/products/haircare products/14.webp" alt="Conditioner">
+                        <p class="title">Silky Conditioner</p>
+                        <p class="subtitle">Smooths Hair</p>
+                        <p class="price">₹349</p>
+                        <button>Add to cart</button>
+                    </div>
+                        <div class="product-card">
+                        <img src="assets/products/haircare products/15.webp" alt="Conditioner">
+                        <p class="title">Silky Conditioner</p>
+                        <p class="subtitle">Smooths Hair</p>
+                        <p class="price">₹349</p>
+                        <button>Add to cart</button>
+                    </div>
+                    <div class="product-card">
+                        <img src="assets/products/haircare products/2.jpg" alt="Shampoo">
+                        <p class="title">Gentle Shampoo</p>
+                        <p class="subtitle">Cleanses & Strengthens</p>
+                        <p class="price">₹299</p>
+                        <button>Add to cart</button>
+                    </div>
+                    <div class="product-card">
+                        <img src="assets/products/haircare products/3.jpg" alt="Conditioner">
+                        <p class="title">Silky Conditioner</p>
+                        <p class="subtitle">Smooths Hair</p>
+                        <p class="price">₹349</p>
+                        <button>Add to cart</button>
+                    </div>
+                    <div class="product-card">
+                        <img src="assets/products/haircare products/4.jpg" alt="Conditioner">
+                        <p class="title">Silky Conditioner</p>
+                        <p class="subtitle">Smooths Hair</p>
+                        <p class="price">₹349</p>
+                        <button>Add to cart</button>
+                    </div>
+                    <div class="product-card">
+                        <img src="assets/products/haircare products/5.webp" alt="Conditioner">
+                        <p class="title">Silky Conditioner</p>
+                        <p class="subtitle">Smooths Hair</p>
+                        <p class="price">₹349</p>
+                        <button>Add to cart</button>
+                    </div>
+                    <div class="product-card">
+                        <img src="assets/products/haircare products/6.webp" alt="Conditioner">
+                        <p class="title">Silky Conditioner</p>
+                        <p class="subtitle">Smooths Hair</p>
+                        <p class="price">₹349</p>
+                        <button>Add to cart</button>
+                    </div>
+                    <div class="product-card">
+                        <img src="assets/products/haircare products/7.jpg" alt="Conditioner">
+                        <p class="title">Silky Conditioner</p>
+                        <p class="subtitle">Smooths Hair</p>
+                        <p class="price">₹349</p>
+                        <button>Add to cart</button>
+                    </div>
+                    <div class="product-card">
+                        <img src="assets/products/haircare products/8.jpeg" alt="Conditioner">
+                        <p class="title">Silky Conditioner</p>
+                        <p class="subtitle">Smooths Hair</p>
+                        <p class="price">₹349</p>
+                        <button>Add to cart</button>
+                    </div>
+                    <div class="product-card">
+                        <img src="assets/products/haircare products/9.jpeg" alt="Conditioner">
+                        <p class="title">Silky Conditioner</p>
+                        <p class="subtitle">Smooths Hair</p>
+                        <p class="price">₹349</p>
+                        <button>Add to cart</button>
+                    </div>
+                </div>
+            </section>
+
+
+            <section class="newsletter">
+                <h2>S&nbsp;U&nbsp;B&nbsp;S&nbsp;C&nbsp;R&nbsp;I&nbsp;B&nbsp;E&nbsp;&nbsp;T&nbsp;O&nbsp;&nbsp;O&nbsp;U&nbsp;R&nbsp;&nbsp;N&nbsp;E&nbsp;W&nbsp;S&nbsp;L&nbsp;E&nbsp;T&nbsp;T&nbsp;E&nbsp;R</h2>
+                <p>Get the latest updates and exclusive offers.</p>
+                <form action="#" method="post">
+                    <input type="email" placeholder="Enter your email" required>
+                    <button type="submit">Subscribe</button>
+                </form>
+            </section>
+            <footer>
+                <p>Copyright &copy; 2025 La Lueur. All rights reserved.</p>
+                <div class="social-icons">
+                    <a href="#"><i class="fab fa-facebook-f"></i></a>
+                    <a href="#"><i class="fab fa-instagram"></i></a>
+                    <a href="#"><i class="fab fa-twitter"></i></a>
+                    <a href="#"><i class="fab fa-pinterest"></i></a>
+                </div>
+            </footer>
+
         </main>        
     </body>
 </html>
