updated index and style page of the task-2

--- a/LEVEL-1/TASK-2/index.html
+++ b/LEVEL-1/TASK-2/index.html
@@ -348,12 +348,31 @@
 
             <section class="newsletter">
                 <h2>S&nbsp;U&nbsp;B&nbsp;S&nbsp;C&nbsp;R&nbsp;I&nbsp;B&nbsp;E&nbsp;&nbsp;T&nbsp;O&nbsp;&nbsp;O&nbsp;U&nbsp;R&nbsp;&nbsp;N&nbsp;E&nbsp;W&nbsp;S&nbsp;L&nbsp;E&nbsp;T&nbsp;T&nbsp;E&nbsp;R</h2>
-                <p>Get the latest updates and exclusive offers.</p>
-                <form action="#" method="post">
-                    <input type="email" placeholder="Enter your email" required>
-                    <button type="submit">Subscribe</button>
-                </form>
+                <p class="tagline">D&nbsp;O&nbsp;N'&nbsp;T&nbsp;&nbsp;M&nbsp;I&nbsp;S&nbsp;S&nbsp;&nbsp;O&nbsp;U&nbsp;T</p>
+                <p class="subtext">Join our newsletter for occasional updates, new product releases,<br> and simple skincare insights.</p>
+
+                <div class="newsletter-wrapper">
+                    <div class="circle-collage-grid">
+                        <img src="assets/newsletter/1.jpg" alt="img1" />
+                        <img src="assets/newsletter/2.jpg" alt="img2" />
+                        <img src="assets/newsletter/3.jpg" alt="img3" />
+                        <img src="assets/newsletter/4.jpg" alt="img4" />
+                        <img src="assets/newsletter/5.jpg" alt="img5" />
+                        <img src="assets/newsletter/6.jpg" alt="img6" />
+                    </div>
+
+                    <form class="newsletter-form" action="#" method="post">
+                        <input type="email" placeholder="Enter your email" required />
+                        <button type="submit">Subscribe</button>
+                    </form>
+                </div>
             </section>
+
+            <section class="about-us">
+                <h2>A&nbsp;B&nbsp;O&nbsp;U&nbsp;T&nbsp;&nbsp;U&nbsp;S</h2>
+                <p>At La Lueur, we believe in the power of natural beauty. Our products are crafted with care, using the finest ingredients to nourish your skin, body, and hair. Join us on a journey to discover your glow.</p>   
+            </section>
+
             <footer>
                 <p>Copyright &copy; 2025 La Lueur. All rights reserved.</p>
                 <div class="social-icons">
