updated the index and style page of task-2

--- a/LEVEL-1/TASK-2/index.html
+++ b/LEVEL-1/TASK-2/index.html
@@ -363,24 +363,13 @@
 
                     <form class="newsletter-form" action="#" method="post">
                         <input type="email" placeholder="Enter your email" required />
-                        <button type="submit">Subscribe</button>
+                        <button type="submit">SIGN UP</button>
                     </form>
                 </div>
             </section>
-
-            <section class="about-us">
-                <h2>A&nbsp;B&nbsp;O&nbsp;U&nbsp;T&nbsp;&nbsp;U&nbsp;S</h2>
-                <p>At La Lueur, we believe in the power of natural beauty. Our products are crafted with care, using the finest ingredients to nourish your skin, body, and hair. Join us on a journey to discover your glow.</p>   
-            </section>
-
+            
             <footer>
                 <p>Copyright &copy; 2025 La Lueur. All rights reserved.</p>
-                <div class="social-icons">
-                    <a href="#"><i class="fab fa-facebook-f"></i></a>
-                    <a href="#"><i class="fab fa-instagram"></i></a>
-                    <a href="#"><i class="fab fa-twitter"></i></a>
-                    <a href="#"><i class="fab fa-pinterest"></i></a>
-                </div>
             </footer>
 
         </main>        
