--- a/LEVEL-1/TASK-1/projects.html
+++ b/LEVEL-1/TASK-1/projects.html
@@ -28,6 +28,21 @@
             </div>
         </div>
 
+        <div class="projects-gallery">
+            <div class="project-card">
+                <img src="project1.jpg" alt="Project 1">
+                <h3>Personal Portfolio</h3>
+                <p>Built using HTML, CSS, and JavaScript.</p>
+            </div>
+            <div class="project-card">
+                <img src="mlproject.jpg" alt="Machine Learning Project">
+                <h3>Spam Classifier</h3>
+                <p>Implemented using Scikit-learn and Python.</p>
+            </div>
+    <!-- Add more cards similarly -->
+        </div>
+
+
         <a href="index.html" class="close-btn"> X </a>
     </body>
 </html>
