--- a/LEVEL-1/TASK-1/about.html
+++ b/LEVEL-1/TASK-1/about.html
@@ -13,7 +13,7 @@
     <body>
         <div class="overlay"></div>
         <div class="about-img">
-            <img src=""/>
+            <img src="assets/pfp.jpg" alt="Profile-Pic" />
         </div>
 
         <div class="about-head">
