--- a/LEVEL-1/TASK-1/projects.html
+++ b/LEVEL-1/TASK-1/projects.html
@@ -20,29 +20,23 @@
             <h2>PROJECTS</h2>
         </div>
 
-       <div class="projects-filter">
-            <div class="filter-links">
-                <button>All</button>
-                <button>Web Design</button>
-                <button>Machine Learning</button>
-            </div>
-        </div>
-
         <div class="projects-gallery">
             <div class="project-card">
-                <img src="project1.jpg" alt="Project 1">
-                <h3>Personal Portfolio</h3>
-                <p>Built using HTML, CSS, and JavaScript.</p>
+                <img src="assets/projects/ML_project.png" alt="Machine Learning Project">
+                <h3>Household Waste Segregation Image Classifier</h3>
+                <p>Built using a CNN model using Tensorflow/Keras</p>
             </div>
             <div class="project-card">
-                <img src="mlproject.jpg" alt="Machine Learning Project">
-                <h3>Spam Classifier</h3>
-                <p>Implemented using Scikit-learn and Python.</p>
+                <img src="assets/projects/webpage_project.png" alt="Web Development Project">
+                <h3>Landing Page for E-Commerce Website</h3>
+                <p>Implemented using HTML and CSS.</p>
             </div>
-    <!-- Add more cards similarly -->
+            <div class="project-card">
+                <img src="assets/projects/DBMS_project.png" alt="DBMS Project">
+                <h3>Product Inventory System</h3>
+                <p>Implemented using Python and MySQL</p>
+            </div>
         </div>
-
-
         <a href="index.html" class="close-btn"> X </a>
     </body>
 </html>
