--- a/LEVEL-1/TASK-2/index.html
+++ b/LEVEL-1/TASK-2/index.html
@@ -103,57 +103,57 @@
                 <div class="product-row">
                     <div class="product-card">
                         <img src="assets/products/skincare products/sp7.jpg" alt="Serum 6">
-                        <p class="title">Salicylic Acid Serum</p>
-                        <p class="subtitle">Fights Acne</p>
+                        <p class="title">The Ordinary</p>
+                        <p class="subtitle">Hyaluronic Acid 2% + B5</p>
                         <p class="price">₹599</p>
                         <button>Add to cart</button>
                     </div>
                     <div class="product-card">
                         <img src="assets/products/skincare products/sp11.webp" alt="Serum 7">
-                        <p class="title">Salicylic Acid Serum</p>
-                        <p class="subtitle">Fights Acne</p>
+                        <p class="title">The Ordinary</p>
+                        <p class="subtitle">Multi Peptide + HA Serum</p>
                         <p class="price">₹599</p>
                         <button>Add to cart</button>
                     </div>
                     <div class="product-card">
                         <img src="assets/products/skincare products/sp12.jpg" alt="Serum 7">
-                        <p class="title">Salicylic Acid Serum</p>
-                        <p class="subtitle">Fights Acne</p>
+                        <p class="title">The Ordinary</p>
+                        <p class="subtitle">Niacinamide 10% + Zinc 1%</p>
                         <p class="price">₹599</p>
                         <button>Add to cart</button>
                     </div>
                     <div class="product-card">
                         <img src="assets/products/skincare products/sp13.webp" alt="Serum 7">
-                        <p class="title">Salicylic Acid Serum</p>
-                        <p class="subtitle">Fights Acne</p>
+                        <p class="title">The Ordinary</p>
+                        <p class="subtitle">2% Alpha Arbutin + HA</p>
                         <p class="price">₹599</p>
                         <button>Add to cart</button>
                     </div>
                     <div class="product-card">
                         <img src="assets/products/skincare products/sp9.jpg" alt="Serum 7">
-                        <p class="title">Salicylic Acid Serum</p>
-                        <p class="subtitle">Fights Acne</p>
+                        <p class="title">The Ordinary</p>
+                        <p class="subtitle">2% Salicylic Acid Solution</p>
                         <p class="price">₹599</p>
                         <button>Add to cart</button>
                     </div>
                     <div class="product-card">
                         <img src="assets/products/skincare products/sp2.webp" alt="Serum 2">
-                        <p class="title">Salicylic Acid Serum</p>
-                        <p class="subtitle">Fights Acne</p>
+                        <p class="title">Minimalist</p>
+                        <p class="subtitle">02% Hyaluronic + PGA Face Serum</p>
                         <p class="price">₹599</p>
                         <button>Add to cart</button>
                     </div>
                     <div class="product-card">
                         <img src="assets/products/skincare products/sp3.jpg" alt="Serum 3">
-                        <p class="title">Salicylic Acid Serum</p>
-                        <p class="subtitle">Fights Acne</p>
+                        <p class="title">Derma CO</p>
+                        <p class="subtitle">2% Kojic Acid face Serum</p>
                         <p class="price">₹599</p>
                         <button>Add to cart</button>
                     </div>
                     <div class="product-card">
                         <img src="assets/products/skincare products/sp6.jpg" alt="Serum 5">
-                        <p class="title">Salicylic Acid Serum</p>
-                        <p class="subtitle">Fights Acne</p>
+                        <p class="title">Minimalist</p>
+                        <p class="subtitle">10% Vitamin C Face Serum</p>
                         <p class="price">₹599</p>
                         <button>Add to cart</button>
                     </div>
@@ -164,36 +164,36 @@
                 <div class="product-row">
                     <div class="product-card">
                         <img src="assets/products/bodycare products/1.webp" alt="Moisturizer 1">
-                        <p class="title">Hydrating Moisturizer</p>
-                        <p class="subtitle">Lightweight & Nourishing</p>
+                        <p class="title">Olay</p>
+                        <p class="subtitle">Advanced Anti-Aging Body Lotion</p>
                         <p class="price">₹349</p>
                         <button>Add to cart</button>
                     </div>
                     <div class="product-card">
                         <img src="assets/products/bodycare products/10.jpg" alt="Moisturizer 1">
-                        <p class="title">Hydrating Moisturizer</p>
-                        <p class="subtitle">Lightweight & Nourishing</p>
+                        <p class="title">Tree Hut</p>
+                        <p class="subtitle">Almond & Honey Shea Sugar Body Scrub</p>
                         <p class="price">₹349</p>
                         <button>Add to cart</button>
                     </div>
                     <div class="product-card">
                         <img src="assets/products/bodycare products/11.jpg" alt="Moisturizer 1">
-                        <p class="title">Hydrating Moisturizer</p>
-                        <p class="subtitle">Lightweight & Nourishing</p>
+                        <p class="title">Dove</p>
+                        <p class="subtitle">Crushed Lavender & Coconut Milk Exfoliating Body Polish</p>
                         <p class="price">₹349</p>
                         <button>Add to cart</button>
                     </div>
                     <div class="product-card">
                         <img src="assets/products/bodycare products/2.webp" alt="Moisturizer 1">
-                        <p class="title">Hydrating Moisturizer</p>
-                        <p class="subtitle">Lightweight & Nourishing</p>
+                        <p class="title">Nivea</p>
+                        <p class="subtitle">Deep Moisture Body Lotion</p>
                         <p class="price">₹349</p>
                         <button>Add to cart</button>
                     </div>
                     <div class="product-card">
                         <img src="assets/products/bodycare products/3.webp" alt="Moisturizer 1">
-                        <p class="title">Hydrating Moisturizer</p>
-                        <p class="subtitle">Lightweight & Nourishing</p>
+                        <p class="title">Urban Hydration</p>
+                        <p class="subtitle">Vanilla Body Lotion</p>
                         <p class="price">₹349</p>
                         <button>Add to cart</button>
                     </div>
@@ -206,36 +206,36 @@
                     </div>
                     <div class="product-card">
                         <img src="assets/products/bodycare products/5.webp" alt="Moisturizer 1">
-                        <p class="title">Hydrating Moisturizer</p>
-                        <p class="subtitle">Lightweight & Nourishing</p>
+                        <p class="title">Dove</p>
+                        <p class="subtitle">Deeply Nourishing Body Wash</p>
                         <p class="price">₹349</p>
                         <button>Add to cart</button>
                     </div>
                     <div class="product-card">
                         <img src="assets/products/bodycare products/6.avif" alt="Moisturizer 1">
-                        <p class="title">Hydrating Moisturizer</p>
-                        <p class="subtitle">Lightweight & Nourishing</p>
+                        <p class="title">Chemists At Play</p>
+                        <p class="subtitle">Daily Exfoliating Body Wash</p>
                         <p class="price">₹349</p>
                         <button>Add to cart</button>
                     </div>
                     <div class="product-card">
                         <img src="assets/products/bodycare products/7.webp" alt="Moisturizer 1">
-                        <p class="title">Hydrating Moisturizer</p>
-                        <p class="subtitle">Lightweight & Nourishing</p>
+                        <p class="title">Dove</p>
+                        <p class="subtitle">Pomegranate Seeds & Shea butter Exfoliating Body Polish</p>
                         <p class="price">₹349</p>
                         <button>Add to cart</button>
                     </div>
                     <div class="product-card">
                         <img src="assets/products/bodycare products/8.avif" alt="Moisturizer 1">
-                        <p class="title">Hydrating Moisturizer</p>
-                        <p class="subtitle">Lightweight & Nourishing</p>
+                        <p class="title">Dove</p>
+                        <p class="subtitle">Brown Sugar & Coconut Butter Body Scrub</p>
                         <p class="price">₹349</p>
                         <button>Add to cart</button>
                     </div>
                     <div class="product-card">
                         <img src="assets/products/bodycare products/9.jpeg" alt="Moisturizer 1">
-                        <p class="title">Hydrating Moisturizer</p>
-                        <p class="subtitle">Lightweight & Nourishing</p>
+                        <p class="title">Tree Hut</p>
+                        <p class="subtitle">Vanilla Shea Sugar Scrub</p>
                         <p class="price">₹349</p>
                         <button>Add to cart</button>
                     </div>
