entirely completed task-2 and task-3

--- a/LEVEL-1/TASK-2/index.html
+++ b/LEVEL-1/TASK-2/index.html
@@ -246,99 +246,99 @@
                 <div class="product-row">
                     <div class="product-card">
                         <img src="assets/products/haircare products/1.jpg" alt="Shampoo">
-                        <p class="title">Gentle Shampoo</p>
-                        <p class="subtitle">Cleanses & Strengthens</p>
-                        <p class="price">₹299</p>
+                        <p class="title">L'oreal Paris</p>
+                        <p class="subtitle">Absolute Repair Shampooing Professional</p>
+                        <p class="price">₹699</p>
                         <button>Add to cart</button>
                     </div>
                     <div class="product-card">
                         <img src="assets/products/haircare products/10.jpeg" alt="Conditioner">
-                        <p class="title">Silky Conditioner</p>
-                        <p class="subtitle">Smooths Hair</p>
+                        <p class="title">Dove</p>
+                        <p class="subtitle">Intensive Repair Shampoo</p>
                         <p class="price">₹349</p>
                         <button>Add to cart</button>
                     </div>
                         <div class="product-card">
                         <img src="assets/products/haircare products/11.webp" alt="Conditioner">
-                        <p class="title">Silky Conditioner</p>
-                        <p class="subtitle">Smooths Hair</p>
+                        <p class="title">Dove</p>
+                        <p class="subtitle">Absolute Curls Shampoo</p>
                         <p class="price">₹349</p>
                         <button>Add to cart</button>
                     </div>
                         <div class="product-card">
                         <img src="assets/products/haircare products/13.jpg" alt="Conditioner">
-                        <p class="title">Silky Conditioner</p>
-                        <p class="subtitle">Smooths Hair</p>
+                        <p class="title">Matrix</p>
+                        <p class="subtitle">Smooth Straight Shea Butter Hair Mask</p>
                         <p class="price">₹349</p>
                         <button>Add to cart</button>
                     </div>
                         <div class="product-card">
                         <img src="assets/products/haircare products/14.webp" alt="Conditioner">
-                        <p class="title">Silky Conditioner</p>
-                        <p class="subtitle">Smooths Hair</p>
+                        <p class="title">Dove</p>
+                        <p class="subtitle">Intense Damage Repair Hair Mask</p>
                         <p class="price">₹349</p>
                         <button>Add to cart</button>
                     </div>
                         <div class="product-card">
                         <img src="assets/products/haircare products/15.webp" alt="Conditioner">
-                        <p class="title">Silky Conditioner</p>
-                        <p class="subtitle">Smooths Hair</p>
+                        <p class="title">Dove</p>
+                        <p class="subtitle">10 in 1 Serum Hair Mask</p>
                         <p class="price">₹349</p>
                         <button>Add to cart</button>
                     </div>
                     <div class="product-card">
                         <img src="assets/products/haircare products/2.jpg" alt="Shampoo">
-                        <p class="title">Gentle Shampoo</p>
-                        <p class="subtitle">Cleanses & Strengthens</p>
+                        <p class="title">L'oreal Paris</p>
+                        <p class="subtitle">Color Vibrancy Shampoo and Conditioner Conbo</p>
                         <p class="price">₹299</p>
                         <button>Add to cart</button>
                     </div>
                     <div class="product-card">
                         <img src="assets/products/haircare products/3.jpg" alt="Conditioner">
-                        <p class="title">Silky Conditioner</p>
-                        <p class="subtitle">Smooths Hair</p>
+                        <p class="title">L'oreal Paris</p>
+                        <p class="subtitle">Total Repair 5 Repairing Shampoo</p>
                         <p class="price">₹349</p>
                         <button>Add to cart</button>
                     </div>
                     <div class="product-card">
                         <img src="assets/products/haircare products/4.jpg" alt="Conditioner">
-                        <p class="title">Silky Conditioner</p>
-                        <p class="subtitle">Smooths Hair</p>
+                        <p class="title">L'oreal Paris</p>
+                        <p class="subtitle">Hyaluron Moisture Conditioner</p>
                         <p class="price">₹349</p>
                         <button>Add to cart</button>
                     </div>
                     <div class="product-card">
                         <img src="assets/products/haircare products/5.webp" alt="Conditioner">
-                        <p class="title">Silky Conditioner</p>
-                        <p class="subtitle">Smooths Hair</p>
-                        <p class="price">₹349</p>
+                        <p class="title">L'oreal Paris</p>
+                        <p class="subtitle">Scalp Advanced Shampooing Professional</p>
+                        <p class="price">₹749</p>
                         <button>Add to cart</button>
                     </div>
                     <div class="product-card">
                         <img src="assets/products/haircare products/6.webp" alt="Conditioner">
-                        <p class="title">Silky Conditioner</p>
-                        <p class="subtitle">Smooths Hair</p>
+                        <p class="title">L'oreal Paris</p>
+                        <p class="subtitle">Elvive Hyaluron + Plump Conditioner</p>
                         <p class="price">₹349</p>
                         <button>Add to cart</button>
                     </div>
                     <div class="product-card">
                         <img src="assets/products/haircare products/7.jpg" alt="Conditioner">
-                        <p class="title">Silky Conditioner</p>
-                        <p class="subtitle">Smooths Hair</p>
+                        <p class="title">Dove</p>
+                        <p class="subtitle">Nourishing Oil Care Conditionerr</p>
                         <p class="price">₹349</p>
                         <button>Add to cart</button>
                     </div>
                     <div class="product-card">
                         <img src="assets/products/haircare products/8.jpeg" alt="Conditioner">
-                        <p class="title">Silky Conditioner</p>
-                        <p class="subtitle">Smooths Hair</p>
+                        <p class="title">Dove</p>
+                        <p class="subtitle">Serum Conditioner</p>
                         <p class="price">₹349</p>
                         <button>Add to cart</button>
                     </div>
                     <div class="product-card">
                         <img src="assets/products/haircare products/9.jpeg" alt="Conditioner">
-                        <p class="title">Silky Conditioner</p>
-                        <p class="subtitle">Smooths Hair</p>
+                        <p class="title">Dove</p>
+                        <p class="subtitle">Color Care Shampoo</p>
                         <p class="price">₹349</p>
                         <button>Add to cart</button>
                     </div>
